--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="https://www.stat.tamu.edu/">TAMU Statistics Department</a>
             </td>
             <td>
-                <img src="C:\Users\KaniyamattamLab\Downloads\1703124820529 (2).jpg" alt="My Picture" width="150px" height="150px">
+                <img src="https://github.com/SPZenik/SPZenik.github.io/blob/main/img.jpg?raw=true" alt="My Picture" width="150px" height="150px">
             </td>
         </tr>
         <tr>
